--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');
+
 * {
 	margin: 0;
 	box-sizing: border-box;
@@ -5,12 +7,18 @@
 
 #root {
 	display: flex;
-	// flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	height: 100vh;
 	width: 100vw;
 	overflow: hidden;
-
 	background-color: $gray-3;
+
+	@include mobile {
+		align-items: flex-start;
+	}
+}
+
+body {
+	font-family: $font-family-sans-serif;
 }
