Update container max dimentions

--- a/src/components/logic/onboarding/_onboarding.scss
+++ b/src/components/logic/onboarding/_onboarding.scss
@@ -1,7 +1,9 @@
 .Onboarding {
 	background-color: $gray-4;
 	width: 66%;
+	max-width: 50rem;
 	height: 75%;
+	max-height: 36rem;
 	border-radius: $br-lg;
 	padding: $pad-lg;
 
